feat: queue lyrics edit jobs asynchronously
